fix to smooth collapse

--- a/css/litao_style.css
+++ b/css/litao_style.css
@@ -237,10 +237,11 @@ section{height:100%;height:100vh;}
 #useful_resources .collapsable_plus{margin-right: auto;}
 #useful_resources .collapsable_plus.added:before{content:'-';}
 #useful_resources .collapsable_plus:before{content:'+';}
+.chapter:hover{cursor: pointer;}
 .chapter{border-bottom:1px dotted black;margin-left:92px;margin-right:92px;margin-top:39px;line-height:1.9;padding-bottom:10px;}
-.chapter_title{font-family:'BrandonGrotesque-Bold';font-size:24px;}
+.chapter_title{font-family:'BrandonGrotesque-Bold';font-size:22px; letter-spacing: 0.09rem;}
 .chapter_link{font-family:'BrandonGrotesque-Bold';letter-spacing:0.1em;}
-.chapter_content{border-top: 1px dotted black;}
+.chapter_content{border-top: 1px dotted black;padding: 64px 15px 45px 0; letter-spacing: 0.09rem; line-height: 1.5; font-family: 'BrandonGrotesque-Light'}
 .btn.sharp{border-radius:0;background-color:#dfeae1;border:0 none;margin-bottom:50px;}
 .contact-form{margin-top:50px;text-align:left;}
 #mobile-view .contact-form{text-align:center;}
